# surf.new

./: .cursorrules  .env.local.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  pyproject.toml  repomix-output.txt  requirements.txt  tailwind.config.js  vercel.json
.husky/: pre-commit
api/: Dockerfile  __init__.py  index.py  models.py  providers.py  schemas.py  streamer.py
api/middleware/: profiling_middleware.py
api/plugins/: README.md  __init__.py
api/plugins/base/: __init__.py  agent.py  tools.py
api/plugins/browser_use/: __init__.py  agent.py  system_prompt.py
api/plugins/claude_computer_use/: __init__.py  agent.py  tests.py  tools.py
api/plugins/claude_steel_use/: __init__.py  agent.py  prompts.py  tools.py
api/plugins/example_plugin/: __init__.py
api/plugins/openai_computer_use/: __init__.py  agent.py  config.py  conversation_manager.py  cursor_overlay.py  key_mapping.py  message_handler.py  prompts.py  steel_computer.py  tools.py
api/utils/: prompt.py  types.py
app/: globals.css  layout.tsx  page.tsx
app/chat/: layout.tsx  page.tsx
app/components/ui/: tool.tsx
app/contexts/: ChatContext.tsx  SettingsContext.tsx  SteelContext.tsx
app/hooks/: useAgents.ts  useOllamaModels.ts
app/providers/: PHProvider.tsx  QueryProvider.tsx
app/stores/: timerStore.ts
app/tests/: CodeBlock.test.tsx  InlineCode.test.tsx  Markdown.test.tsx
components/: InlineCode.tsx  LayoutContent.tsx  Markdown.tsx  PostHogPageView.tsx
components/markdown/: BlockParser.tsx  CodeBlock.tsx  InlineParser.tsx  ListParser.tsx  MarkdownText.tsx  MemoryGoalBlock.tsx  TableParser.tsx  index.ts  utils.ts
components/ui/: AuthModal.tsx  Browser.tsx  DomTimer.tsx  SettingsDrawer.tsx  Timer.tsx  alert.tsx  button.tsx  checkbox.tsx  dialog.tsx  navbar.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  toast.tsx  toaster.tsx  tool.tsx  tooltip.tsx
components/ui/ChatInput/: SendButton.tsx  index.tsx  types.ts
hooks/: use-toast.ts
lib/: utils.ts
monitor/: README.md  index.js  package-lock.json  package.json
types/: agents.ts
