[project]
name = "surf-new"
version = "0.1.0"
description = "Surf new"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.4.0",
    "certifi>=2024.7.4",
    "click>=8.1.7",
    "distro>=1.9.0",
    "dnspython>=2.6.1",
    "email_validator>=2.2.0",
    "fastapi>=0.111.1",
    "fastapi-cli>=0.0.4",
    "h11>=0.14.0",
    "httpcore>=1.0.5",
    "httptools>=0.6.1",
    "httpx>=0.27.0",
    "idna>=3.7",
    "Jinja2>=3.1.4",
    "langchain-core>=0.3.33",
    "langchain-anthropic>=0.1.23",
    "langchain-openai>=0.1.20",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=2.1.5",
    "mdurl>=0.1.2",
    "openai>=1.37.1",
    "pydantic>=2.10.2",
    "pydantic_core>=2.20.1",
    "playwright>=1.49.0",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0.1",
    "rich>=13.7.1",
    "ruff>=0.5.0",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "starlette>=0.37.2",
    "tqdm>=4.66.4",
    "typer>=0.12.3",
    "typing_extensions>=4.12.2",
    "uvicorn>=0.30.3",
    "watchfiles>=0.22.0",
    "websockets>=12.0",
    "browser-use>=0.1.30",
    "steel-sdk>=0.1.0b8",
    "langchain>=0.3.14",
    "psutil>=7.0.0",
]
[tool.setuptools]
packages = ["api"]

[tool.ruff]
# Target Python 3.11
target-version = "py311"
line-length = 88

# Enable the formatter
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable linting rules
[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "W", "C90", "N", "B", "UP", "ASYNC", "S", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
# Remove COM812 to avoid conflicts with the formatter
ignore = ["COM812"]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["api"]
force-single-line = false
lines-after-imports = 2
